--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "dev:watch": "nodemon"
   },
   "dependencies": {
     "eslint": "8.48.0",
@@ -16,5 +17,8 @@
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
     "zustand": "^4.4.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.1"
   }
 }
