--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "dev:watch": "nodemon"
   },
   "dependencies": {
+    "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "next": "13.4.19",
