--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "immer": "^10.0.2",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
