--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "install": "next build",
     "dev:watch": "nodemon"
   },
   "dependencies": {
