--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "babel-plugin-styled-components": "^2.1.4",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
+    "formik": "^2.4.5",
     "immer": "^10.0.2",
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "styled-components": "^6.0.7",
+    "yup": "^1.3.2",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
