--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "next": "13.4.19",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
     "styled-components": "^6.0.7",
     "yup": "^1.3.2",
     "zustand": "^4.4.1"
