--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
     "styled-components": "^6.0.7",
+    "swiper": "^11.1.9",
     "yup": "^1.4.0",
     "zustand": "^4.4.1"
   },
