--- a/package.json
+++ b/package.json
@@ -5,18 +5,20 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "postbuild": "cp .htaccess out/.htaccess",
+    "postbuild": "cp .htaccess out/.htaccess && node utils/generate-sitemap.js",
     "start": "next start",
     "lint": "next lint",
     "dev:watch": "nodemon"
   },
   "dependencies": {
     "babel-plugin-styled-components": "^2.1.4",
+    "dotenv": "^16.4.5",
     "eslint": "8.48.0",
     "eslint-config-next": "13.4.19",
     "formik": "^2.4.6",
     "immer": "^10.0.2",
     "next": "13.4.19",
+    "next-sitemap": "^4.2.3",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hot-toast": "^2.4.1",
